tests/for/var_in_body.rev
for i in 0..2 { var a } // error: expect expression